--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>QQ、微信防红接口 - 勿埋我心</title>
+		<title>QQ、微信防红</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -10,16 +10,17 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>QQ、微信防红接口</h1>
+				<h1>QQ、微信防红</h1>
 				<p>在下方输入需要跳转的链接，即可生成防红接口。<br>
 					复制下方生成的链接，粘贴到微信或者QQ即可。</p>
 			</header>
 
 		<!-- Signup Form -->
-			<form id="signup-form" method="post">
-				<input type="url" name="url" id="url" placeholder="需要跳转的网址" />
-				<input type="button" value="生成" onclick="build_url()"/>
-			</form>
+			<form id="signup-form" method="post" style="text-align: center; margin-top: 50px;">
+            <input type="url" name="url" id="url" placeholder="需要跳转的网址" />
+            <input type="button" value="生成" onclick="build_url()" />
+            </form>
+
 			<p id="b_url"></p>
 
 			<script src="./assets/js/build_url.js"></script>
