--- a/index.html
+++ b/index.html
@@ -16,10 +16,20 @@
 			</header>
 
 		<!-- Signup Form -->
-			<form id="signup-form" method="post" style="text-align: center; margin-top: 50px;">
-            <input type="url" name="url" id="url" placeholder="需要跳转的网址" />
-            <input type="button" value="生成" onclick="build_url()" />
-            </form>
+			<style>
+  #signup-form {
+    text-align: center;
+    margin-top: 50px;
+  }
+  #signup-form input {
+    margin: 10px;
+  }
+</style>
+
+<form id="signup-form" method="post">
+  <input type="url" name="url" id="url" placeholder="需要跳转的网址" />
+  <input type="button" value="生成" onclick="build_url()" />
+</form>
 
 			<p id="b_url"></p>
 
